Love Jesus - link to wordproject

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@ layout: defaultLoveJesus
 </a>
 </li>
 <li>
-<a href="FarHezareNoh.html">FarHezareNoh version of Injil</a>
+<a href="FarHezareNoh.html">FarHezareNoh one page version of Injil</a>
+</li>
+<li>
+<a href="wordproject">Wordproject version of Injil</a>
 </li>
 </ul>
 
